k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-movie-rec-service
spec:
  type: LoadBalancer
  selector:
    app: mlops-movie-rec
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
